--- a/index.html
+++ b/index.html
@@ -194,4 +194,49 @@
 </script>
 
 </body>
+  <!-- TOP BAR -->
+<header class="topbar">
+  <button class="menu-btn" id="openMenu">☰</button>
+  <span class="top-title">HarDil</span>
+</header>
+
+<!-- SIDE DRAWER -->
+<aside class="drawer" id="drawer">
+  <div class="drawer-header">
+    <h2>HarDil</h2>
+    <button id="closeMenu">✕</button>
+  </div>
+
+  <div class="drawer-content">
+
+    <h4>Navigate</h4>
+    <a data-scroll="social">🌐 Social</a>
+    <a data-scroll="jobs">💼 Jobs & Career</a>
+    <a data-scroll="ott">🎬 Entertainment</a>
+    <a data-scroll="music">🎵 Music</a>
+    <a data-scroll="rides">🚕 Rides</a>
+    <a data-scroll="food">🍔 Food</a>
+    <a data-scroll="health">🩺 Health</a>
+    <a data-scroll="personality">🧠 Learning</a>
+
+    <h4>About</h4>
+    <a href="about.html">ℹ️ About HarDil</a>
+    <a href="about.html#story">❤️ Our Story</a>
+    <a href="about.html#motive">🎯 Motive & Vision</a>
+
+    <h4>Trust & Legal</h4>
+    <a href="privacy.html">🔒 Privacy Policy</a>
+    <a href="terms.html">📜 Terms & Conditions</a>
+    <a href="legal.html">⚖️ Legal Disclaimer</a>
+
+    <h4>Support</h4>
+    <a href="mailto:yourmail@example.com">📩 Contact Us</a>
+    <a href="#">💬 Feedback</a>
+
+  </div>
+</aside>
+
+<!-- BACKDROP -->
+<div class="backdrop" id="backdrop"></div>
+
 </html>
