--- a/index.html
+++ b/index.html
@@ -195,10 +195,13 @@
 
 </body>
 <header class="topbar">
+  <!-- LEFT: MENU -->
   <button class="menu-btn" id="openMenu">☰</button>
+
+  <!-- CENTER: TITLE -->
   <span class="top-title">HarDil</span>
 
-  <!-- THREE DOT MENU -->
+  <!-- RIGHT: THREE DOTS -->
   <div class="overflow">
     <button class="dots-btn" id="dotsBtn">⋮</button>
 
@@ -215,5 +218,6 @@
     </div>
   </div>
 </header>
+
 
 </html>
