--- a/index.html
+++ b/index.html
@@ -194,10 +194,11 @@
 </script>
 
 </body>
-  <header class="topbar">
-  <span class="top-title">HarDil</span>
-  <button class="menu-btn" id="openMenu">☰</button>
+<header class="app-topbar">
+  <span class="app-title">HarDil</span>
+  <span class="menu-icon">☰</span>
 </header>
+
   <aside class="drawer" id="drawer">
   <div class="drawer-header">
     <h2>HarDil</h2>
