--- a/splash.html
+++ b/splash.html
@@ -2,142 +2,143 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8" />
-<title>HD</title>
+<title>HarDil</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<meta name="theme-color" content="#4f46e5" />
-
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@500;700&display=swap" rel="stylesheet">
 
 <style>
-* { margin:0; padding:0; box-sizing:border-box; font-family:Inter,sans-serif; }
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: Inter, system-ui, sans-serif;
+}
 
 body {
-  height:100vh;
-  background: url("assets/splash/bg.jpg") center/cover no-repeat;
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  overflow:hidden;
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
 }
 
-/* overlay for readability */
+/* ===== BACKGROUND ===== */
+.splash-bg {
+  position: fixed;
+  inset: 0;
+  background: url("assets/images/hd-bg.jpg") center/cover no-repeat;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .overlay {
-  position:absolute;
-  inset:0;
-  background:linear-gradient(180deg, rgba(2,6,23,.7), rgba(15,23,42,.85));
+  position: absolute;
+  inset: 0;
+  background: radial-gradient(circle, rgba(0,0,0,0.2), rgba(0,0,0,0.6));
 }
 
-/* main scene */
-.scene {
-  position:relative;
-  z-index:2;
-  text-align:center;
-  color:#fff;
+/* ===== LOGO ===== */
+.logo-wrap {
+  position: relative;
+  z-index: 5;
+  text-align: center;
 }
 
-/* characters */
-.people {
-  font-size:96px;
-  opacity:0;
-  transform:scale(.8);
-  animation:peopleIn .8s ease forwards;
-}
-
-@keyframes peopleIn {
-  to { opacity:1; transform:scale(1); }
-}
-
-/* handshake */
-.handshake {
-  font-size:72px;
-  opacity:0;
-  animation:fadeIn .6s ease forwards;
-  animation-delay:.8s;
-}
-
-/* hug heart */
-.heart {
-  font-size:64px;
-  opacity:0;
-  animation:fadeIn .6s ease forwards;
-  animation-delay:1.4s;
-}
-
-/* category icons */
-.icons {
-  display:flex;
-  gap:14px;
-  justify-content:center;
-  margin:20px 0;
-  opacity:0;
-  animation:fadeIn .6s ease forwards;
-  animation-delay:2s;
-}
-
-.icons span {
-  font-size:26px;
-}
-
-/* logo */
 .logo {
-  font-size:56px;
-  font-weight:700;
-  margin-top:10px;
-  opacity:0;
-  transform:scale(.6);
-  animation:logoIn .7s ease forwards;
-  animation-delay:2.4s;
-}
-
-@keyframes logoIn {
-  to { opacity:1; transform:scale(1); }
+  font-size: 4.5rem;
+  font-weight: 800;
+  color: #fff;
+  letter-spacing: 4px;
+  opacity: 0;
+  transform: scale(0.6);
+  animation: logoPop 1.6s ease forwards;
+  animation-delay: 0.6s;
 }
 
 .tagline {
-  margin-top:8px;
-  font-size:14px;
-  opacity:0;
-  animation:fadeIn .6s ease forwards;
-  animation-delay:2.9s;
+  margin-top: 10px;
+  font-size: 1rem;
+  color: #e5e7eb;
+  opacity: 0;
+  animation: fadeUp 1.2s ease forwards;
+  animation-delay: 1.8s;
 }
 
-@keyframes fadeIn {
-  to { opacity:1; }
+/* ===== FLOATING ICONS ===== */
+.icons {
+  position: absolute;
+  width: 260px;
+  height: 260px;
+  opacity: 0;
+  animation: showIcons 1s ease forwards;
+  animation-delay: 2.4s;
+}
+
+.icon {
+  position: absolute;
+  font-size: 1.6rem;
+  animation: float 4s ease-in-out infinite;
+}
+
+.icon:nth-child(1) { top: 0; left: 50%; animation-delay: 0s; }
+.icon:nth-child(2) { top: 20%; right: 0; animation-delay: .5s; }
+.icon:nth-child(3) { top: 50%; right: 0; animation-delay: 1s; }
+.icon:nth-child(4) { bottom: 20%; right: 0; animation-delay: 1.5s; }
+.icon:nth-child(5) { bottom: 0; left: 50%; animation-delay: 2s; }
+.icon:nth-child(6) { bottom: 20%; left: 0; animation-delay: 2.5s; }
+.icon:nth-child(7) { top: 50%; left: 0; animation-delay: 3s; }
+.icon:nth-child(8) { top: 20%; left: 0; animation-delay: 3.5s; }
+
+@keyframes float {
+  0%,100% { transform: translateY(0); }
+  50% { transform: translateY(-12px); }
+}
+
+/* ===== ANIMATIONS ===== */
+@keyframes logoPop {
+  0% { opacity: 0; transform: scale(0.6); }
+  60% { opacity: 1; transform: scale(1.1); }
+  100% { opacity: 1; transform: scale(1); }
+}
+
+@keyframes fadeUp {
+  from { opacity: 0; transform: translateY(12px); }
+  to { opacity: 1; transform: translateY(0); }
+}
+
+@keyframes showIcons {
+  to { opacity: 1; }
 }
 </style>
 </head>
 
 <body>
-<div class="overlay"></div>
 
-<div class="scene">
+<div class="splash-bg">
+  <div class="overlay"></div>
 
-  <div class="people">🧑‍🤝‍🧑</div>
-  <div class="handshake">🤝</div>
-  <div class="heart">❤️</div>
-
+  <!-- FLOATING ICONS -->
   <div class="icons">
-    <span>🌐</span>
-    <span>💼</span>
-    <span>🎬</span>
-    <span>🎵</span>
-    <span>🚕</span>
-    <span>🍔</span>
-    <span>🩺</span>
-    <span>🧠</span>
+    <div class="icon">🌐</div>
+    <div class="icon">💼</div>
+    <div class="icon">🎬</div>
+    <div class="icon">🎵</div>
+    <div class="icon">🩺</div>
+    <div class="icon">🏏</div>
+    <div class="icon">🧠</div>
+    <div class="icon">🍔</div>
   </div>
 
-  <div class="logo">HD</div>
-  <div class="tagline">Family First · One Place for Everything</div>
-
+  <!-- LOGO -->
+  <div class="logo-wrap">
+    <div class="logo">HD</div>
+    <div class="tagline">Family First · One Place for Everything</div>
+  </div>
 </div>
 
 <script>
 setTimeout(() => {
-  sessionStorage.setItem("harDilSplash","done");
+  sessionStorage.setItem("harDilSplash", "done");
   window.location.replace("index.html");
-}, 3500);
+}, 4000);
 </script>
 
 </body>
