--- a/index.html
+++ b/index.html
@@ -100,13 +100,47 @@
 <!-- 💼 JOBS -->
 <section class="card jobs reveal">
   <h2>💼 Jobs & Career</h2>
+  <p class="section-sub">Find jobs, internships & career growth</p>
+
   <div class="grid">
-    <div class="app-btn" data-url="https://linkedin.com/jobs"><img src="assets/icons/linkedin.png"><span>LinkedIn</span></div>
-    <div class="app-btn" data-url="https://naukri.com"><img src="assets/icons/naukri.png"><span>Naukri</span></div>
-    <div class="app-btn" data-url="https://indeed.com"><img src="assets/icons/indeed.png"><span>Indeed</span></div>
-    <div class="app-btn" data-url="https://internshala.com"><img src="assets/icons/internshala.png"><span>Internshala</span></div>
+    <div class="app-btn" data-url="https://www.linkedin.com/jobs">
+      <img src="assets/icons/linkedin.png"><span>LinkedIn</span>
+    </div>
+
+    <div class="app-btn" data-url="https://www.naukri.com">
+      <img src="assets/icons/naukri.png"><span>Naukri</span>
+    </div>
+
+    <div class="app-btn" data-url="https://www.indeed.com">
+      <img src="assets/icons/indeed.png"><span>Indeed</span>
+    </div>
+
+    <div class="app-btn" data-url="https://www.glassdoor.com">
+      <img src="assets/icons/glassdoor.png"><span>Glassdoor</span>
+    </div>
+
+    <div class="app-btn" data-url="https://www.foundit.in">
+      <img src="assets/icons/foundit.png"><span>Foundit</span>
+    </div>
+
+    <div class="app-btn" data-url="https://unstop.com">
+      <img src="assets/icons/unstop.png"><span>Unstop</span>
+    </div>
+
+    <div class="app-btn" data-url="https://www.shine.com">
+      <img src="assets/icons/shine.png"><span>Shine</span>
+    </div>
+
+    <div class="app-btn" data-url="https://cutshort.io">
+      <img src="assets/icons/cutshort.png"><span>CutShort</span>
+    </div>
+
+    <div class="app-btn" data-url="https://internshala.com">
+      <img src="assets/icons/internshala.png"><span>Internshala</span>
+    </div>
   </div>
 </section>
+
 
 <!-- 🎬 OTT -->
 <section class="card ott reveal">
