--- a/splash.html
+++ b/splash.html
@@ -128,7 +128,7 @@ body {
   </div>
 
   <!-- LOGO -->
-  <div class="logo-wrap">
+  <div class="splash-container">
     <div class="logo">HD</div>
     <div class="tagline">Family First · One Place for Everything</div>
   </div>
