--- a/splash.html
+++ b/splash.html
@@ -128,7 +128,8 @@ body {
   </div>
 
   <!-- LOGO -->
-  <div class="splash-container"></div>
+  <div class="splash-container">
+    <div class="splash-content">
     <div class="logo">HD</div>
     <div class="tagline">Family First · One Place for Everything</div>
   </div>
